<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/background"
    tools:context=".CreateRequest">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/backgroundshape"
            android:gravity="center"
            android:orientation="vertical">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="New Request"
            android:paddingBottom="20dp"
            android:textColor="#4D04B6"
            android:textSize="30dp"
            android:textStyle="bold" />


    <!--top-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="horizontal"
        android:baselineAligned="false">

        <!--left-->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingRight="5dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:text="@string/first_name"
                />

            <TextView
                android:id="@+id/FirstName"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:maxLength="20"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:textColor="@color/colorAccent"
                android:background="@drawable/editshape"
                android:inputType="textPersonName"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:text="@string/type_id" />

            <Spinner
                android:id="@+id/TypeID"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:maxLength="20"
                android:layout_marginTop="5dp"
                android:textAlignment="center"
                android:background="@drawable/editshape"
                android:entries="@array/TypeID"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:text="@string/phone"
                />

            <TextView
                android:id="@+id/PhoneNo"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:maxLength="10"
                android:hint="@string/form_phone"
                android:textColor="@color/colorAccent"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:background="@drawable/editshape"
                android:inputType="number"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:text="@string/date" />

            <TextView
                android:id="@+id/TxtDate"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:maxLength="10"
                android:layout_marginTop="5dp"
                android:background="@drawable/editshape"
                android:textColor="@color/colorAccent"
                android:gravity="center"
                android:hint="@string/form_date"
                android:inputType="date"  />


        </LinearLayout>

        <!--right-->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingLeft="5dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:text="@string/last_name"
                />

            <TextView
                android:id="@+id/LastName"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:maxLength="20"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:textColor="@color/colorAccent"
                android:background="@drawable/editshape"
                android:inputType="textPersonName"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:text="@string/id" />


            <TextView
                android:id="@+id/TxtID"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:maxLength="10"
                android:gravity="center"
                android:layout_marginTop="5dp"
                android:textColor="@color/colorAccent"
                android:background="@drawable/editshape"
                android:inputType="numberDecimal"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:text="@string/dob"
                />

            <TextView
                android:id="@+id/DateBirth"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:maxLength="10"
                android:gravity="center"
                android:hint="@string/form_date"
                android:textColor="@color/colorAccent"
                android:layout_marginTop="5dp"
                android:background="@drawable/editshape"
                android:inputType="date"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:text="@string/time" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/TxtTimeFrom"
                    android:layout_width="0dp"
                    android:layout_height="35dp"
                    android:layout_weight="1"
                    android:maxLength="5"
                    android:hint="@string/from"
                    android:gravity="center"
                    android:layout_marginTop="5dp"
                    android:textColor="@color/colorAccent"
                    android:background="@drawable/editshape"
                    android:inputType="time" />

                <TextView
                    android:layout_width="5dp"
                    android:layout_height="35dp"
                    android:gravity="center"
                    android:layout_marginTop="5dp" />

                <TextView
                    android:id="@+id/TxtTimeTo"
                    android:layout_width="0dp"
                    android:layout_height="35dp"
                    android:layout_weight="1"
                    android:maxLength="5"
                    android:hint="@string/to"
                    android:gravity="center"
                    android:layout_marginTop="5dp"
                    android:textColor="@color/colorAccent"
                    android:background="@drawable/editshape"
                    android:inputType="time" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <!--bottom-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/reason" />

        <MultiAutoCompleteTextView
            android:id="@+id/TxtReason"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_weight="3"
            android:gravity="start|top"
            android:layout_marginRight="20dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/editshape"
            android:textColor="@color/colorAccent"
            android:maxLength="147"
            android:lineSpacingExtra="5dp"
            />


    </LinearLayout>

        <Button
            android:id="@+id/btn"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="30dp"
            android:layout_weight="1"
            android:background="@drawable/buttonshape"
            android:text="Request"
            android:textColor="@color/White"
            android:textStyle="bold" />


    </LinearLayout>

    </ScrollView>

</LinearLayout>