<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="30dp"
    tools:context=".PermissionDetail">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Request ID: "
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/Request_ID"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            android:text="Request State: "/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/Request_State"/>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorAccent"
        android:gravity="center"
        android:text="________________________________________________"/>

<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/ehelp"
    android:orientation="vertical"
    >
    <!--top-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:orientation="horizontal" android:baselineAligned="false">

        <!--left-->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingRight="5dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                android:text="@string/first_name"
                android:textStyle="bold"
                android:textColor="@color/colorPrimary"
                />

            <TextView
                android:id="@+id/FirstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="20"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                android:textStyle="bold"
                android:textColor="@color/colorPrimary"
                android:text="@string/type_id" />

            <TextView
                android:id="@+id/TypeID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="20"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                android:text="@string/phone"
                android:textStyle="bold"
                android:textColor="@color/colorPrimary"
                />

            <TextView
                android:id="@+id/PhoneNo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="10"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                android:textStyle="bold"
                android:textColor="@color/colorPrimary"
                android:text="@string/date" />

            <TextView
                android:id="@+id/TxtDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="10"
            />


        </LinearLayout>

        <!--right-->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingLeft="5dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                android:text="@string/last_name"
                android:textStyle="bold"
                android:textColor="@color/colorPrimary"
                />

            <TextView
                android:id="@+id/LastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="20"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                android:textStyle="bold"
                android:textColor="@color/colorPrimary"
                android:text="@string/id" />


            <TextView
                android:id="@+id/TxtID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="10"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                android:text="@string/dob"
                android:textStyle="bold"
                android:textColor="@color/colorPrimary"
                />

            <TextView
                android:id="@+id/DateBirth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="10" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                android:textStyle="bold"
                android:textColor="@color/colorPrimary"
                android:text="@string/time" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/TxtTimeFrom"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLength="5" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:paddingRight="5dp"
                    android:paddingLeft="5dp"
                    android:text="TO"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/TxtTimeTo"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:maxLength="5"
                    />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <!--bottom-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            android:text="@string/reason" />

        <TextView
            android:id="@+id/TxtReason"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:maxLength="147" />

        <TextView
            android:id="@+id/file_created"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="invisible"/>

    </LinearLayout>

</LinearLayout>

    <Button
        android:id="@+id/btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/buttonshape"
        android:text="Show Permission"
        android:textColor="@color/White"
        android:visibility="gone"
        android:textStyle="bold" />



</LinearLayout>